tests/NormalTests/paczka1/small_fuzzy/39255236.err
Error in line 1: 0pKAW3cY S377 39,4
Error in line 2: klA4I S705 35,3
Error in line 7: aOdc3hu S705 61,7
